[project]
name = "letta"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
external-tools = []
dev = []
cloud-tool-sandbox = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
